# grapeforum

./: Cargo.toml  Dockerfile  docker-compose.yml  readme.md
src/: in.sql  lib.rs  main.rs  structures.rs  users.rs  utils.rs
src/entities/: comments.rs  mod.rs  posts.rs  prelude.rs  users.rs
src/routes/: comment.rs  create_post.rs  edit_post.rs  home.rs  index.rs  invalid_user.rs  login.rs  logout.rs  mod.rs  post_comment.rs  post_create_post.rs  post_delete.rs  post_edit_post.rs  post_index.rs  post_register.rs  post_users.rs  posts.rs  register.rs  users.rs
src/static/styling/: footer.css  home.css  index.css  post.css
src/static/templates/: bio_form.html  comment.hbs  create_post.hbs  edit_post.hbs  footer.html  home.hbs  index.hbs  invalid_user.html  login.hbs  nav.hbs  nav.html  post.hbs  register.hbs  user.hbs
templates/: home.hbs  index.html  invalid_user.html
