[package]
name = "grapeforum"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.2"
actix-governor = "0.5.0"
actix-session = { version = "0.8.0", features = ["cookie-session"] }
actix-web = "4.4.0"
base64 = "0.21.4"
bcrypt = "0.15.0"
dotenvy = "0.15.7"
handlebars = "4.4.0"
rand = "0.8.5"
regex = "1.10.3"
sea-orm = { version = "0.12", features = [ "sqlx-postgres", "runtime-tokio-rustls", "macros" ] }
serde = "1.0.188"
serde_json = "1.0.107"
